html structure with BEM methodology

--- a/index.html
+++ b/index.html
@@ -11,5 +11,47 @@
 </head>
 <body>
 
+<div class="container">
+    <header class="header__wrapper">
+        <a href="" class="logo">
+            <img src="" alt="" class="logo__link">
+        </a>
+        <nav class="menu">
+            <a href="" class="menu__item">item 1</a>
+            <a href="" class="menu__item">item 2</a>
+            <a href="" class="menu__item">item 3</a>
+            <a href="" class="menu__item">item 4</a>
+        </nav>
+    </header>
+
+    <main class="main__wrapper">
+        <article class="mainArticle">
+            <h1 class="mainArticle__hdl"></h1>
+            <p class="mainArticle__text"></p>
+            <p class="mainArticle__text"></p>
+            <section class="mainArticle__related related">
+                <div class="related__item"></div>
+                <div class="related__item"></div>
+                <div class="related__item"></div>
+            </section>
+        </article>
+        <aside class="aside">
+            <div class="aside__item"></div>
+            <div class="aside__item"></div>
+            <div class="aside__item"></div>
+        </aside>
+    </main>
+
+    <footer class="footer__wrapper">
+        <nav class="secondaryMenu">
+            <a href="" class="secondaryMenu__item">item 1</a>
+            <a href="" class="secondaryMenu__item">item 1</a>
+            <a href="" class="secondaryMenu__item">item 1</a>
+            <a href="" class="secondaryMenu__item">item 1</a>
+        </nav>
+        <p class="copyright">&copysr; 2024 Januszex</p>
+    </footer>
+</div>
+
 </body>
 </html>
