selectors according to html structure

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <div class="container">
     <header class="header__wrapper">
         <a href="" class="logo">
-            <img src="" alt="" class="logo__link">
+            <img src="" alt="" class="logo__img">
         </a>
         <nav class="menu">
-            <a href="" class="menu__item">item 1</a>
+            <a href="" class="menu__item menu__item--active">item 1</a>
             <a href="" class="menu__item">item 2</a>
             <a href="" class="menu__item">item 3</a>
             <a href="" class="menu__item">item 4</a>
