flexbox layout with responsive examples

--- a/index.html
+++ b/index.html
@@ -26,9 +26,18 @@
 
     <main class="main__wrapper">
         <article class="mainArticle">
-            <h1 class="mainArticle__hdl"></h1>
-            <p class="mainArticle__text"></p>
-            <p class="mainArticle__text"></p>
+            <h1 class="mainArticle__hdl">Lorem ipsum dolor sit.</h1>
+            <p class="mainArticle__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum in, laboriosam?
+                Ad cumque dolores dolorum, eaque earum exercitationem id molestias natus non officia perspiciatis
+                quaerat quas quasi, repellendus saepe tempora voluptates. Ab accusamus accusantium ad aliquid aut eius
+                iusto ratione rerum, sit voluptatibus? Error explicabo id ipsum officia praesentium voluptates.</p>
+            <p class="mainArticle__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis culpa,
+                deserunt dicta dolor ducimus ea eius enim eveniet ipsam itaque labore magnam perferendis perspiciatis
+                recusandae temporibus velit veritatis voluptates? Ad architecto asperiores at beatae consequatur
+                consequuntur corporis debitis, dicta doloremque dolores doloribus dolorum eligendi est expedita
+                explicabo fuga harum iusto laborum maiores mollitia nihil numquam odit, omnis porro praesentium quas qui
+                ratione recusandae rem reprehenderit suscipit velit voluptatem, voluptatum! Ad dignissimos fugit hic
+                minus quasi? Aliquid beatae blanditiis illum veritatis?</p>
             <section class="mainArticle__related related">
                 <div class="related__item"></div>
                 <div class="related__item"></div>
@@ -49,7 +58,7 @@
             <a href="" class="secondaryMenu__item">item 1</a>
             <a href="" class="secondaryMenu__item">item 1</a>
         </nav>
-        <p class="copyright">&copysr; 2024 Januszex</p>
+        <p class="copyright">&#169; 2024 Januszex</p>
     </footer>
 </div>
 
